Added Meta tag name specifically

--- a/HTML Letter.html
+++ b/HTML Letter.html
@@ -3,6 +3,7 @@
 <html>
 	<head>
 	<meta charset=“utf-8”>
+  <meta name="author" content="Eleanor Gaye">
 	<title>Letter to Dr. Eleanor Gaye</title>
 <link rel="stylesheet" href="CSS Letter.css">
 </head>
