--- a/HTML Letter.html
+++ b/HTML Letter.html
@@ -4,7 +4,7 @@
 	<head>
 	<meta charset=“utf-8”>
   <meta name="author" content="Eleanor Gaye">
-	<title>Letter to Dr. Eleanor Gaye</title>
+	<title>Letter from Dr. Eleanor Gaye to Eileen Dover</title>
 <link rel="stylesheet" href="CSS Letter.css">
 </head>
 	<body>
